Reworked the tile

--- a/content/_日本語.md
+++ b/content/_日本語.md
@@ -1,17 +1,13 @@
 ---
-title: 
+title: "日本語"
 ---
-
-## 前置き
+## 概要
 この欄は日本語を学ぶためものです。
 
 日本語は私の第一言語じゃない。でも私は学びたいです。
 
 よろしくお願いします。
 
-## 有用なリンク
-https://www3.nhk.or.jp/news/easy/
-
-
-## 今日は記事を読みました
+## リンク
+- [[日本語/記事を読みました|記事を読みました]]
 
