Added some more notes

--- a/content/_日本語.md
+++ b/content/_日本語.md
@@ -2,12 +2,13 @@
 title: "日本語"
 ---
 ## 概要
-この欄は日本語を学ぶためものです。
+このページは日本語を学ぶためものです。
 
-日本語は私の第一言語ではありません。でも私は学びたいです。
+日本語は私の第一言語ではありません。でも学びたいです。
 
 よろしくお願いします。
 
 ## リンク
 - [[日本語/記事を読みました|記事を読みました]]
+- [[日本語/言葉]]
 
